--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.0.1",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
