--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,12 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "eslint": "^8.21.0",
-    "eslint-plugin-react": "^7.30.1"
+    "eslint-plugin-react": "^7.30.1",
+    "typescript": "^4.8.2"
   }
 }
