--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.5.4",
     "sequelize": "^6.21.3",
