--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1",
+    "prettier": "2.7.1",
     "typescript": "^4.8.2"
   }
 }
