Modify yaml file

--- a/.github/matching-service.yaml
+++ b/.github/matching-service.yaml
@@ -5,12 +5,12 @@ name: matching-service
 
 on:
   push:
-    branches: ["main"]
+    # branches: ["main"]
     paths:
       - "backend/matching-service/**"
       - ".github/workflows/matching-service.yaml"
-  pull_request:
-    branches: ["main"]
+  # pull_request:
+  # branches: ["main"]
 
 jobs:
   build:
