--- a/.github/user-service.yaml
+++ b/.github/user-service.yaml
@@ -29,5 +29,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
+        working-directory: "backend/user-service"
       - run: npm run build --if-present
+        working-directory: "backend/user-service"
       - run: npm test
+        working-directory: "backend/user-service"
