--- a/.github/matching-service.yaml
+++ b/.github/matching-service.yaml
@@ -21,6 +21,10 @@ jobs:
         node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    defaults:
+      run:
+        working-directory: "./backend/matching-service"
+
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -29,8 +33,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
-        working-directory: "backend/matching-service"
+        # working-directory: "./backend/matching-service"
       - run: npm run build --if-present
-        working-directory: "backend/matching-service"
+        # working-directory: "backend/matching-service"
       - run: npm test
-        working-directory: "backend/matching-service"
+        # working-directory: "backend/matching-service"
