Modify services yaml

--- a/.github/user-service.yaml
+++ b/.github/user-service.yaml
@@ -5,12 +5,12 @@ name: user-service
 
 on:
   push:
-    # branches: ["main"]
-    paths:
-      - "backend/user-service/**"
-      # - ".github/workflows/user-service.yaml"
-  # pull_request:
-  # branches: ["main"]
+    branches: ["main"]
+    # paths:
+    #   - "backend/user-service/"
+    # - ".github/workflows/user-service.yaml"
+  pull_request:
+    branches: ["main"]
 
 jobs:
   build:
@@ -21,6 +21,10 @@ jobs:
         node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    defaults:
+      run:
+        working-directory: "user-service"
+
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -28,9 +32,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+      - run: cd user-service
       - run: npm ci
-        working-directory: "backend/user-service"
+        # working-directory: "./backend/user-service"
       - run: npm run build --if-present
-        working-directory: "backend/user-service"
+        # working-directory: "backend/user-service"
       - run: npm test
-        working-directory: "backend/user-service"
+        # working-directory: "backend/user-service"
