--- a/.github/workflows/matching-svc.yml
+++ b/.github/workflows/matching-svc.yml
@@ -4,13 +4,13 @@
 name: matching-service
 
 on:
-    push:
-      branches: ["matching-ci-cd"]
-    # paths:
-    #   - "backend/matching-service/"
-    # - ".github/workflows/matching-svc.yaml"
-    pull_request:
-      branches: ["matching-ci-cd"]
+  push:
+    branches: ["matching-ci-cd"]
+  # paths:
+  #   - "backend/matching-service/"
+  # - ".github/workflows/matching-svc.yaml"
+  pull_request:
+    branches: ["matching-ci-cd"]
 
 jobs:
   build:
@@ -23,7 +23,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: "backend/matching-service"
+        working-directory: "matching-service"
 
     steps:
       - uses: actions/checkout@v3
