--- a/.github/workflows/user-svc.yml
+++ b/.github/workflows/user-svc.yml
@@ -5,12 +5,12 @@ name: user-service
 
 on:
   push:
-    branches: ["main"]
-    paths:
-      - "backend/matching-service/**"
-      - ".github/workflows/matching-service.yaml"
+    branches: ["matching-ci-cd"]
+  # paths:
+  #   - "backend/matching-service/"
+  # - ".github/workflows/matching-svc.yaml"
   pull_request:
-    branches: ["main"]
+    branches: ["matching-ci-cd"]
 
 jobs:
   build:
@@ -21,6 +21,10 @@ jobs:
         node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    defaults:
+      run:
+        working-directory: "user-service"
+
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -28,6 +32,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+      - run: pwd
+      # - run: cd backend/matching-service
       - run: npm ci
+        # working-directory: "./backend/matching-service"
       - run: npm run build --if-present
+        # working-directory: "backend/matching-service"
       - run: npm test
+        # working-directory: "backend/matching-service"
