--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -37,6 +37,8 @@ jobs:
       - run: npm ci
         # working-directory: "./backend/matching-service"
       - run: npm run build --if-present
+        env:
+          CI: false
         # working-directory: "backend/matching-service"
       - run: npm test
       # working-directory: "backend/matching-service"
