--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -40,5 +40,5 @@ jobs:
         env:
           CI: false
         # working-directory: "backend/matching-service"
-      - run: npm test
+      - run: npm test --passWithNoTests
       # working-directory: "backend/matching-service"
