--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "jest-watcher": "^29.1.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -23,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --passWithNoTests",
     "lint": "npx eslint ."
   },
   "eslintConfig": {
@@ -51,6 +52,7 @@
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1",
+    "jest-watch-typeahead": "^0.6.5",
     "typescript": "^4.8.2"
   }
 }
