--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "sequelize": "^6.21.3",
     "socket.io": "^4.5.1",
