--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "jest-watcher": "^29.1.0",
+    "monaco-editor": "^0.34.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
