--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@monaco-editor/react": "^4.4.6",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.9.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -17,12 +18,10 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-monaco-editor": "^0.50.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.1",
     "use-context": "^0.0.1",
-    "vscode-languageserver-protocol": "^3.17.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
