Add styling to matchingPage

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -21,6 +21,21 @@
       "src": "studying.png",
       "type": "image/png",
       "sizes": "64x64"
+    },
+    {
+      "src": "beginner.png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
+      "src": "intermediate.png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
+      "src": "expert.png",
+      "type": "image/png",
+      "sizes": "64x64"
     }
   ],
   "start_url": ".",
