--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --passWithNoTests",
-    "lint": "npx eslint .",
-    "prepare": "cd .. && husky install frontend/.husky"
+    "test": "react-scripts test --passWithNoTests"
   },
   "eslintConfig": {
     "extends": [
@@ -56,13 +54,7 @@
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1",
-    "husky": "^8.0.1",
     "jest-watch-typeahead": "^0.6.5",
-    "lint-staged": "^13.0.3",
-    "prettier": "2.7.1",
     "typescript": "^4.8.2"
-  },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
   }
 }
