--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "This is a template repository for CS3219 project.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo 'Error: no test specified' && exit 1",
     "redis": "redis-server",
     "user-svc": "cd user-service && npm run dev",
     "match-svc": "cd matching-service && npm run dev",
     "comm-svc": "cd communication-service && npm run dev",
     "coll-svc": "cd collaboration-service && npm run dev",
     "qns-svc": "cd question-service && npm run dev",
-    "dev": "concurrently --kill-others \"npm run redis\" \"npm run user-svc\" \"npm run match-svc\" \"npm run comm-svc\" \"npm run coll-svc\" \"npm run qns-svc\""
+    "dev": "concurrently --kill-others 'npm run redis' 'npm run user-svc' 'npm run match-svc' 'npm run comm-svc' 'npm run coll-svc' 'npm run qns-svc'",
+    "lint": "npx eslint .",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,12 @@
   },
   "homepage": "https://github.com/CS3219-AY2223S1/cs3219-project-ay2223s1-g60#readme",
   "devDependencies": {
-    "concurrently": "^7.4.0"
+    "concurrently": "^7.4.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "2.7.1"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
