--- a/communication-service/package.json
+++ b/communication-service/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +16,13 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mocha": "^10.1.0",
     "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.3",
     "uuid": "^8.3.2"
   }
 }
