--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "concurrently": "^7.4.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "2.7.1"
+    "prettier": "^2.7.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
