--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,7 +1,9 @@
 name: frontend
 
 on:
+  workflow_dispatch:
   push:
+    branches: [main]
   pull_request:
 
 jobs:
@@ -14,7 +16,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: "frontend"
+        working-directory: 'frontend'
 
     steps:
       - uses: actions/checkout@v3
@@ -22,7 +24,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
+          cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
         env:
