--- a/.github/workflows/matching-svc.yml
+++ b/.github/workflows/matching-svc.yml
@@ -1,9 +1,11 @@
 name: matching-service
 
 on:
+  workflow_dispatch:
   push:
+    branches: [main]
   pull_request:
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,7 +16,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: "matching-service"
+        working-directory: 'matching-service'
 
     steps:
       - uses: actions/checkout@v3
@@ -22,6 +24,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
+          cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
+      - run: npm run test
+        env:
+          ENV: TEST
+          DB_CLOUD_URI_TEST: ${{secrets.DB_CLOUD_URI_TEST}}
