--- a/matching-service/package.json
+++ b/matching-service/package.json
@@ -7,19 +7,24 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 10000 --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "socket.io-client": "^4.5.3"
   },
   "dependencies": {
     "axios": "^1.1.2",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "chai-shallow-deep-equal": "^1.4.6",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.1.0",
     "mongoose": "^6.5.4",
     "sequelize": "^6.21.3",
     "socket.io": "^4.5.1",
