--- a/collaboration-service/package.json
+++ b/collaboration-service/package.json
@@ -7,17 +7,20 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "socket.io-client": "^4.5.3"
   },
   "dependencies": {
+    "chai": "^4.3.6",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mocha": "^10.1.0",
     "socket.io": "^4.5.1",
     "uuid": "^8.3.2"
   }
