Revert "Remove homepage, make roompage fit the viewport"
This reverts commit 0ffb242007fd13cc17c5bd23266601a1e065df6c.

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -18,6 +18,11 @@
       "sizes": "512x512"
     },
     {
+      "src": "studying.png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
       "src": "beginner.png",
       "type": "image/png",
       "sizes": "64x64"
