--- a/.github/workflows/question-svc.yml
+++ b/.github/workflows/question-svc.yml
@@ -27,3 +27,6 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm run test
+        env:
+          ENV: TEST
+          DB_CLOUD_URI: ${{secrets.QUESTION_DB_CLOUD_URI}}
