--- a/question-service/package.json
+++ b/question-service/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000 ---exit",
     "dev": "nodemon index.js"
   },
   "author": "",
@@ -17,6 +17,9 @@
     "mongoose": "^6.6.2"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.1.0",
     "nodemon": "^2.0.20"
   }
 }
