--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -16,6 +16,26 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "studying.png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
+      "src": "beginner.png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
+      "src": "intermediate.png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
+      "src": "expert.png",
+      "type": "image/png",
+      "sizes": "64x64"
     }
   ],
   "start_url": ".",
