Add script to install dependencies

--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "test": "echo 'Error: no test specified' && exit 1",
     "redis": "redis-server",
     "user-svc": "cd user-service && npm run dev",
+    "i-user-svc": "cd user-service && npm i",
     "match-svc": "cd matching-service && npm run dev",
+    "i-match-svc": "cd matching-service && npm i",
     "comm-svc": "cd communication-service && npm run dev",
+    "i-comm-svc": "cd communication-service && npm i",
     "coll-svc": "cd collaboration-service && npm run dev",
+    "i-coll-svc": "cd collaboration-service && npm i",
     "qns-svc": "cd question-service && npm run dev",
-    "history-svc": "cd history-service && npm run dev",
+    "i-qns-svc": "cd question-service && npm i",
+    "hist-svc": "cd history-service && npm run dev",
+    "i-hist-svc": "cd history-service && npm i",
     "frontend": "cd frontend && npm run start",
-    "dev": "concurrently --kill-others 'npm run redis' 'npm run user-svc' 'npm run match-svc' 'npm run comm-svc' 'npm run coll-svc' 'npm run qns-svc' 'npm run history-svc' 'npm run frontend'",
+    "i-frontend": "cd frontend && npm i",
+    "dev": "concurrently --kill-others 'npm run redis' 'npm run user-svc' 'npm run match-svc' 'npm run comm-svc' 'npm run coll-svc' 'npm run qns-svc' 'npm run hist-svc' 'npm run frontend'",
+    "install-dep": "concurrently 'npm run i-user-svc' 'npm run i-match-svc' 'npm run i-comm-svc' 'npm run i-coll-svc' 'npm run i-qns-svc' 'npm run i-hist-svc' 'npm run i-frontend'",
     "lint": "npx eslint .",
     "prepare": "husky install"
   },
