--- a/user-service/package.json
+++ b/user-service/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "redis-server & mocha --timeout 10000 --exit"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +16,16 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "bcrypt": "^5.0.1",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
+    "chai-shallow-deep-equal": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.1.0",
     "mongoose": "^6.4.6",
     "mongoose-validation-error-message-handler": "^1.2.5",
     "redis": "^4.3.0"
